--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
+    <meta name="robots" content="noindex, nofollow">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Prime Apporteur d'Affaires - Cash Ploisy</title>
@@ -410,7 +411,7 @@
     <div class="poster">
         <div class="header">
             <div class="explosion"></div>
-            <img src="/mnt/user-data/uploads/Logo_SCAL_pour_reporting_2.png" class="logo-scal" alt="SCAL" onerror="this.style.display='none'">
+            <img src="Logo_SCAL_pour_reporting_2.png" class="logo-scal" alt="SCAL" onerror="this.style.display='none'">
             <h1>🎯 AMENEZ UN CLIENT<br>AU CASH DE PLOISY 🎯</h1>
             <div class="subtitle">Et gagnez jusqu'à</div>
             <div class="badge">1 150 € !</div>
