--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
                     </li>
                     <li class="exception">
                         <span class="cond-icon">⭐</span>
-                        <span><strong>Exception — compte livré :</strong> sur dérogation uniquement, la <strong>prime d'ouverture de 150€</strong> pourra être versée si la démarche aboutit à l'ouverture d'un compte livré avec une première commande atteignant le CA minimum de 100€. Aucune prime volume ni intéressement sur le CA ne s'applique dans ce cas.</span>
+                        <span><strong>Exception — compte livré :</strong> sur dérogation uniquement, la <strong>prime d'ouverture de 150€</strong> pourra être versée si la démarche aboutit à l'ouverture d'un compte livré avec une première commande atteignant le franco. Aucune prime volume ni intéressement sur le CA ne s'applique dans ce cas.</span>
                     </li>
                 </ul>
             </div>
